<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_screen_bg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
       >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">

            <Button
                android:id="@+id/ac"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ac_btn"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <ImageView
                android:id="@+id/cut"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_special_button"
                android:contentDescription="@string/cut"
                android:elevation="4dp"
                app:srcCompat="@drawable/backspace"
                android:padding="10dp"/>

            <Button
                android:id="@+id/mod"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_special_button"
                android:text="@string/mod"
                android:textColor="@color/spl_btn_txt"
                android:textSize="35sp"
                android:elevation="4dp"
                />

            <Button
                android:id="@+id/division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_special_button"
                android:text="@string/divide"
                android:textColor="@color/spl_btn_txt"
                android:textSize="35sp"
                android:elevation="4dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/n7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/seven"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/n8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/eight"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/n9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/nine"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_special_button"
                android:text="@string/multiply"
                android:textColor="@color/spl_btn_txt"
                android:textSize="30sp"
                android:elevation="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            >

            <Button
                android:id="@+id/n4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/four"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/n5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/five"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/n6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/six"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_special_button"
                android:text="@string/dash"
                android:textColor="@color/spl_btn_txt"
                android:textSize="45sp"
                android:elevation="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/n1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/one"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/n2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/two"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/n3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/three"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_special_button"
                android:text="@string/plus"
                android:textColor="@color/spl_btn_txt"
                android:textSize="45sp"
                android:elevation="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">


            <Button
                android:id="@+id/n0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/zero"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/light_number_button"
                android:text="@string/dot"
                android:textColor="@color/btn_txt"
                android:textSize="29sp"
                app:cornerRadius="10dp"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/equal_btn_bg"
                android:text="@string/equal"
                android:textColor="@color/eql_btn_txt"
                android:textSize="35sp"
                android:elevation="4dp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/default_val"
        android:textColor="@color/result_txt"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="120dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/result_txt"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>